# PropertyScanner

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  Dockerfile  FULL_SYSTEM_AUDIT.md  JULES_PROMPT.md  Makefile  README.md  alembic.ini  checkbox.md  crawl_plan_pisos.json  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt  run_dashboard.sh  run_full_pipeline.py  sitecustomize.py  test_extraction.py  test_idealista_extraction.py  test_immobiliare_extraction.py  test_market_trends.py  test_results_pisos.json  verify_pipeline.py  verify_vlm_fetch.py
.claude/: launch.json
.playwright-cli/: page-2026-03-10T17-01-02-448Z.yml  page-2026-03-10T17-01-23-628Z.yml  page-2026-03-10T17-02-16-082Z.yml  page-2026-03-10T17-02-20-833Z.yml  page-2026-03-10T17-03-30-366Z.yml  page-2026-03-10T17-04-07-851Z.yml  page-2026-03-10T17-13-42-014Z.yml  page-2026-03-10T17-15-09-797Z.yml  page-2026-03-10T17-15-38-202Z.yml  page-2026-03-10T17-16-25-644Z.yml  page-2026-03-10T17-16-30-145Z.yml  page-2026-03-10T17-16-43-974Z.yml  page-2026-03-10T17-16-48-418Z.yml  page-2026-03-10T17-17-38-175Z.yml  page-2026-03-10T17-19-01-182Z.yml  page-2026-03-10T17-19-29-689Z.yml
alembic/: env.py
config/: agents.yaml  app.yaml  dataframe.yaml  description_analyst.yaml  hedonic.yaml  image_selector.yaml  llm.yaml  paths.yaml  pipeline.yaml  quality_gate.yaml  registry.yaml  runtime.yaml  scoring.yaml  sources.yaml  tft.yaml  valuation.yaml  vlm.yaml
data/: debug_imm.html  harvest_seen_urls.sqlite3  harvest_seen_urls.sqlite3-shm  harvest_seen_urls.sqlite3-wal  harvest_state_rent.json  (+28 more)
(+836 files in other folders)
